# SmartPack

./: README.md  REVIEW.md  pyproject.toml
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  logging.py
app/db/: session.py
app/frontend/: index.html
app/frontend/assets/: api.js  app.js  logger.js  state.js  styles.css
app/models/: entities.py
app/repositories/: base.py  catalog_repository.py  security_repository.py
app/schemas/: dto.py
app/services/: ai_service.py  audit_service.py  bootstrap_service.py  order_service.py  packing_service.py  security_service.py
app/utils/: security.py
tests/: test_ai_service.py  test_frontend_route.py  test_order_state_machine.py  test_security_service.py
